# events-django-htmx-alpine-project

./: db.sqlite3  pyproject.toml
core/: settings.py  urls.py
events/: admin.py  models.py  urls.py
events/fixtures/: initial_artistic_genre.json
events/migrations/: 0001_initial.py  0002_artisticgenre_location_event.py  0003_remove_location_invitation_and_more.py
events/templates/event/: base.html
events/templates/event/event_list/: page_events_list.html
events/templates/events/: base.html
events/tests/: conftest.py  test_event_list.py
events/views/: __init__.py  event_list_views.py
theme/static_src/: tailwind.config.js
theme/static_src/src/: styles.css
