[tool.poetry]
name = "events"
version = "0.1.0"
description = ""
authors = ["anne"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.7"
pytest-django = "4.7.0"
django-tailwind = {version = "3.6.0", extras = ["reload"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
